# advent-of-code-2021

./: .gitignore  CMakeLists.txt  README.md  day_1.c  days.h  log.h  main.c
solutions/: day_1.c  day_10.c  day_11.c  day_12.c  day_13.c  day_14.c  day_15.c  day_2.c  day_3.c  day_4.c  day_5.c  day_6.c  day_7.c  day_8.c  day_9.c  days.h  days_def.h
util/: files.c  files.h  math.h  strings.c  strings.h
